include/style.css
body .menu_items_public, body .menu_items_logged_in
{
	display: none;
}

	body.not-logged-in .menu_items_public
	{
		display: flex;
	}

	body.logged-in .menu_items_logged_in
	{
		display: flex;
	}

header .wp-block-group-is-layout-flex .wp-block-image, header .wp-block-site-logo, header .wp-block-site-title, header .wp-block-site-tagline
{
	position: relative;
	z-index: 1001;
}

	header .wp-block-site-title a
	{
		transition: all .5s ease;
	}

	header .wp-block-group-is-layout-flex .wp-block-image img
	{
		border-radius: var(--navigation-item-border-radius);
		padding: 0;
		transition: all .5s ease;
	}

	header .widget.navigation + wp-block-search
	{
		margin-left: 1em;
		position: absolute;
		z-index: 1000;
	}

.widget.navigation .toggle_hamburger
{
	cursor: pointer;
	display: none;
	padding: .3em 1em;
	position: relative;
	width: 1.5em;
	z-index: 10000;
}

	.widget.navigation .toggle_hamburger > div
	{
		border-radius: 2em;
		display: block;
		height: .15em;
		margin: .4em 0;
		transition: all .5s ease;
		width: 1.6em;
	}

		.widget.navigation:not(.is_open) .toggle_hamburger > div:nth-child(2)
		{
			width: 1.1em;
		}

			.widget.navigation:not(.is_open):hover .toggle_hamburger > div:nth-child(2)
			{
				width: 1.4em;
			}

		.widget.navigation:not(.is_open) .toggle_hamburger > div:nth-child(3)
		{
			width: 1.4em;
		}

			.widget.navigation:not(.is_open):hover .toggle_hamburger > div:nth-child(3)
			{
				width: 1.6em;
			}

			/* Original*/
			.widget.navigation.is_open .toggle_hamburger > div:nth-child(1)
			{
				transform: rotate(45deg) translate(.4em, .4em);
				width: 1.6em;
			}

			.widget.navigation.is_open .toggle_hamburger > div:nth-child(2)
			{
				margin-left: .8em;
				width: 0;
			}

			.widget.navigation.is_open .toggle_hamburger > div:nth-child(3)
			{
				transform: rotate(-45deg) translate(.4em, -.4em);
				width: 1.6em;
			}";

			/* Cross */
			/*.widget.navigation.is_open .toggle_hamburger > div:nth-child(1)
			{
				transform: rotate(-135deg) translate(-.4em, -.4em);
				width: 1.6em;
			}

			.widget.navigation.is_open .toggle_hamburger > div:nth-child(2)
			{
				margin-left: .8em;
				width: 0;
			}

			.widget.navigation.is_open .toggle_hamburger > div:nth-child(3)
			{
				transform: rotate(135deg) translate(-.4em, .4em);
				width: 1.6em;
			}*/

			/* Rotate */
			/*.widget.navigation.is_open .toggle_hamburger > div:nth-child(1)
			{
				transform: rotate(45deg) translate(.4em, .4em);
				width: 1.6em;
			}

			.widget.navigation.is_open .toggle_hamburger > div:nth-child(2)
			{
				margin-left: .8em;
				width: 0;
			}

			.widget.navigation.is_open .toggle_hamburger > div:nth-child(3)
			{
				transform: rotate(135deg) translate(-.4em, .4em);
				width: 1.6em;
			}*/

			/* Arrow */
			/*.widget.navigation.is_open .toggle_hamburger > div:nth-child(1)
			{
				transform: rotate(135deg) translate(.8em, -1.2em);
				width: .8em;
			}

			.widget.navigation.is_open .toggle_hamburger > div:nth-child(2)
			{
				transform: rotate(90deg) translate(.4em, .4em);
				width: 1.6em;
			}

			.widget.navigation.is_open .toggle_hamburger > div:nth-child(3)
			{
				transform: rotate(45deg) translate(0, .4em);
				width: .8em;
			}*/

	.widget.navigation .wp-block-navigation
	{
		align-items: baseline;
		gap: inherit;
		z-index: 1000;
	}

	.widget.navigation .wp-block-navigation__responsive-container
	{
		display: block;
		position: relative;
	}

		.widget.navigation .wp-block-navigation-item
		{
			border-radius: var(--navigation-item-border-radius);
		}

	.widget.navigation.is_vertical .wp-block-navigation__responsive-container, .widget.navigation.is_vertical .wp-block-navigation-item, .widget.navigation.is_vertical .wp-block-navigation-item > a, .widget.navigation.is_vertical .wp-block-navigation-item > .wp-block-button
	{
		width: 100%;
	}

		.widget.navigation.aligncenter.is_horizontal .wp-block-navigation__container
		{
			flex-grow: unset;
			margin: 0 auto;
		}

		.widget.navigation.alignwide.is_horizontal .wp-block-navigation__container
		{
			flex-grow: unset;
			width: 100%;
		}

			.widget.navigation.alignwide.is_horizontal .wp-block-navigation .wp-block-navigation-item
			{
				flex-grow: 1;
			}

				.widget.navigation.alignwide.is_horizontal .wp-block-navigation > .wp-block-navigation-item > a
				{
					text-align: center;
					width: 100%;
				}

		.widget.navigation.aligncenter.is_vertical .wp-block-navigation-item, .widget.navigation.aligncenter.is_vertical .wp-block-navigation-item > a
		{
			text-align: center;
		}

			.widget.navigation .wp-block-navigation-item > .wp-block-button .wp-block-button__link
			{
				display: block;
				font-size: inherit;
			}

				.widget.navigation:not(.aligncenter).is_vertical > .wp-block-navigation-item:not(.invert) > a
				{
					padding-left: var(--navigation-item-vertical-padding-left, 0);
				}

				.widget.navigation.is_horizontal .wp-block-navigation-item > a
				{
					padding: var(--navigation-item-padding, 0);
				}

				.widget.navigation.is_vertical .wp-block-navigation > .wp-block-navigation-item > a
				{
					padding: var(--navigation-item-padding-vertical);
				}

				.widget.navigation.is_vertical .wp-block-navigation-item > .wp-block-button
				{
					margin: var(--navigation-item-padding-vertical);
				}

			.widget.navigation:not(.aligncenter).is_vertical > .wp-block-navigation-item.invert
			{
				margin-left: 0 !important;
			}

		.widget.navigation .wp-block-navigation .wp-block-navigation-item > img
		{
			display: block;
		}

			.widget.navigation .wp-block-navigation-item.current_menu_item > a
			{
				font-weight: bold;
			}

		.widget.navigation .has-child.current_menu_parent > a
		{
			font-weight: bold;
		}

		.widget.navigation .has-child > a > button.wp-block-navigation__submenu-icon
		{
			margin-left: .25em !important;
			transform: rotate(0deg) translateX(0);
			transition: all .5s ease;
		}

			.widget.navigation .has-child.current_menu_parent > a > button
			{
				transform: rotate(-450deg) translateY(-20%);
			}

			.widget.navigation .has-child:hover > a > button, .widget.navigation .has-child.is_open > a > button
			{
				transform: rotate(-540deg) translateY(-20%);
			}

		.widget.navigation .has-child .wp-block-navigation__submenu-container
		{
			border-radius: .5em;
			overflow: hidden;
		}

			.widget.navigation.is_vertical .has-child .wp-block-navigation__submenu-container
			{
				left: 50%;
				transform: translateX(-50%);
			}

			.widget.navigation .has-child .wp-block-navigation-item
			{
				border-radius: .5em;
			}

